# gomoku

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.txt  cppkg.toml  xmake.lua
.github/workflows/: build-cmake.yml  build-xmake.yml  build.yml
src/: board.cppm  board.hpp  gomoku.cppm  gomoku.hpp  main.cpp
